@@ -451,6 +451,8 @@ extern int clusteracct_storage_g_cluster_cpus(void *db_conn,
 					      time_t event_time);
 
 extern int clusteracct_storage_g_register_ctld(void *db_conn, uint16_t port);
+extern int clusteracct_storage_g_register_disconn_ctld(
+	void *db_conn, char *control_host);
 extern int clusteracct_storage_g_fini_ctld(void *db_conn,
 					   slurmdb_cluster_rec_t *cluster_rec);
 
